# gmail-cli

./: CHANGELOG.md  Cargo.toml  README.md  opencode.json
.tasks/: TODO.md
docs/: architecture.md
src/: app.rs  cli.rs  context.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  labels.rs  messages.rs  mod.rs  models.rs  send_as.rs
src/auth/: keyring_store.rs  mod.rs  oauth.rs  token.rs  token_store.rs
src/commands/: aliases.rs  attachments.rs  auth.rs  get.rs  label.rs  list.rs  mod.rs  profile.rs  send.rs  signature.rs
src/config/: app_config.rs  mod.rs  paths.rs  profile.rs  settings.rs
src/mail/: mime.rs
src/output/: json.rs  mod.rs  text.rs
tests/: api_client.rs  auth_oauth.rs  cli.rs  commands_list.rs  mail_mime.rs
