[package]
name = "gmail"
version = "0.1.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
html-escape = "0.2.13"
mime_guess = "2.0.5"
pulldown-cmark = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
url = "2.5.7"
